force-app/main/default/objects/Case/fields/Asset_Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Transfer_Status__c</fullName>
    <description>BRD Phase 4 - New DAF Pathway: Tracks the asset transfer process from deceased donor&apos;s account to new successor DAF account. Includes journal entry, transfer execution, and relationship linking.</description>
    <inlineHelpText>Only applicable when Pathway = New DAF Account. Tracks transfer from journal entry creation through asset transfer to relationship establishment.</inlineHelpText>
    <label>Asset Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>New Account Verified</fullName>
            </value>
            <value>
                <fullName>Journal Entry Created</fullName>
            </value>
            <value>
                <fullName>Transfer In Progress</fullName>
            </value>
            <value>
                <fullName>Both Accounts Updated</fullName>
            </value>
            <value>
                <fullName>Relationship Established</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>