force-app/main/default/objects/Case/fields/Contact_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attempt_Count__c</fullName>
    <description>BRD Contact Cadence: Running count of contact attempts (1-5). Maps to BRD Day 0, 5, 35, 65, 95 cadence. Auto-increments with each task completion. After 5 attempts without contact, case escalates to trading/liquidation.</description>
    <inlineHelpText>Number of contact attempts made (1-5). Automatically increments as contact tasks are completed. After 5 attempts, case is escalated per BRD.</inlineHelpText>
    <label>Contact Attempt Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>