force-app/main/default/objects/Case/fields/Contact_Established__c.field-meta.xml
<CustomField>
    <fullName>Contact_Established__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >BRD Phase 1-2: Indicates whether verbal contact has been successfully established with the successor. Used as gate to stop contact cadence automation. Only check after direct conversation where successor understands their options.</description>
    <inlineHelpText
  >Check this box ONLY after you have successfully spoken with the successor and confirmed they understand their three pathway options (Final Grant, New DAF, or Disclaim).</inlineHelpText>
    <label>Contact Established</label>
    <type>Checkbox</type>
</CustomField>