force-app/main/default/objects/Case/fields/Contact_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Established_Date__c</fullName>
    <description
  >Phase 2: Date when contact was successfully established with the successor during the contact cadence. Records when the successor was reached and informed about their succession rights.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Auto-populated when agent records a successful contact attempt (outcome = YES). Triggers pathway form email and halts further contact attempts.</inlineHelpText>
    <label>Contact Established Date</label>
    <type>Date</type>
</CustomField>