force-app/main/default/objects/Case/fields/Deceased_Donor__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deceased Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Deceased Donor)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>