force-app/main/default/objects/Case/fields/Disclaimer_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Disposition__c</fullName>
    <description>BRD Phase 4 - Disclaim Pathway: Tracks how disclaimed assets are routed and processed. Assets may go to contingent beneficiaries, Phil Fund, or per original donor instructions.</description>
    <inlineHelpText>Only applicable when Pathway = Disclaim Assets. Documents final disposition of disclaimed assets per fund bylaws and original instructions.</inlineHelpText>
    <label>Disclaimer Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Disclaimer Docs Processed</fullName>
            </value>
            <value>
                <fullName>Routed to Contingent Beneficiary</fullName>
            </value>
            <value>
                <fullName>Routed to Phil Fund</fullName>
            </value>
            <value>
                <fullName>Executed Per Original Instructions</fullName>
            </value>
            <value>
                <fullName>Disposition Documented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>