force-app/main/default/objects/Case/fields/Document_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Review_Status__c</fullName>
    <description>BRD Phase 3: Tracks the review and approval status of submitted documents. Different reviewers based on pathway: Grants Office (Final Grant), New Account team (New DAF), Compliance (Disclaim).</description>
    <inlineHelpText>Current status of document review. Set to &quot;In Review&quot; when documents uploaded, &quot;Requires Changes&quot; if issues found, &quot;Approved&quot; when complete.</inlineHelpText>
    <label>Document Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Requires Changes</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>