force-app/main/default/objects/Case/fields/Document_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Document_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BRD Phase 3: User assigned to review submitted documents. Assignment based on pathway: Grants Office queue (Final Grant), New Account team (New DAF), Compliance team (Disclaim).</description>
    <inlineHelpText>Person responsible for reviewing and approving submitted documents. Typically assigned based on succession pathway chosen.</inlineHelpText>
    <label>Document Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases Reviewing (Succession)</relationshipLabel>
    <relationshipName>Cases_Reviewing_Succession</relationshipName>
    <type>Lookup</type>
</CustomField>