force-app/main/default/objects/Case/fields/Documents_Complete__c.field-meta.xml
<CustomField>
    <fullName>Documents_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BRD Phase 3: Indicates that all required documents for the selected pathway have been received and uploaded to Salesforce Files. Checked by document reviewer after verifying completeness.</description>
    <inlineHelpText>Check when all required documents have been received. Required docs vary by pathway: Final Grant (Succession Form), New DAF (Application + Transfer Auth), Disclaim (Disclaimer Form + Legal Attestation).</inlineHelpText>
    <label>Documents Complete</label>
    <type>Checkbox</type>
</CustomField>