force-app/main/default/objects/Case/fields/Documents_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Documents_Complete_Date__c</fullName>
    <description>BRD Phase 3: Timestamp when all required documents were received and Documents_Complete__c checkbox was marked. Used for SLA tracking and compliance reporting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto-populated when Documents Complete is checked. Marks the transition from Phase 3 (Document Collection) to Phase 4 (Execution).</inlineHelpText>
    <label>Documents Complete Date</label>
    <type>DateTime</type>
</CustomField>