force-app/main/default/objects/Case/fields/Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received__c</fullName>
    <description>BRD Phase 3: Tracks which specific documents have been uploaded to Salesforce Files. Agents check off each document as received to track completion progress.</description>
    <inlineHelpText>Select all documents that have been received and uploaded. Required documents vary by pathway - see Pathway Confirmed field to determine which documents are needed.</inlineHelpText>
    <label>Documents Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Succession Recommendation Form</fullName>
            </value>
            <value>
                <fullName>Death Certificate</fullName>
            </value>
            <value>
                <fullName>ID Verification</fullName>
            </value>
            <value>
                <fullName>New DAF Account Application</fullName>
            </value>
            <value>
                <fullName>Transfer Authorization</fullName>
            </value>
            <value>
                <fullName>Disclaimer Form</fullName>
            </value>
            <value>
                <fullName>Legal Attestation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>