force-app/main/default/objects/Case/fields/Execution_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Completed_Date__c</fullName>
    <description
  >BRD Phase 4: Timestamp when execution completed for the chosen pathway. Set when Execution Status changes to &quot;Completed&quot; after all settlement steps are finished.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Date when pathway execution finished. Marks transition from Phase 4 (Execution) to Phase 5 (Case Closure).</inlineHelpText>
    <label>Execution Completed Date</label>
    <type>DateTime</type>
</CustomField>