force-app/main/default/objects/Case/fields/Execution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Execution_Notes__c</fullName>
    <description
  >BRD Phase 4: Detailed notes documenting the execution process for the chosen pathway. Includes coordination details, settlement tracking, issues encountered, and resolution steps.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Use this field to document execution details, external system coordination (MyQ, Charities Profile, INSF), settlement timing, and any issues or exceptions during the process.</inlineHelpText>
    <label>Execution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>