force-app/main/default/objects/Case/fields/Execution_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Started_Date__c</fullName>
    <description>BRD Phase 4: Timestamp when execution began for the chosen pathway. Typically set when Execution Status changes to &quot;In Progress&quot; after documents are approved.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when pathway execution started. Marks transition from Phase 3 (Document Collection) to Phase 4 (Execution).</inlineHelpText>
    <label>Execution Started Date</label>
    <type>DateTime</type>
</CustomField>