force-app/main/default/objects/Case/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <description
  >BRD Phase 4: Tracks the execution and settlement status of the chosen succession pathway. Different execution steps apply based on Pathway Confirmed (Final Grant, New DAF, Disclaim).</description>
    <inlineHelpText
  >Current status of pathway execution. Progression: Not Started → In Progress → Settlement Pending → Completed. See Execution Notes for detailed progress tracking.</inlineHelpText>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Settlement Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>