force-app/main/default/objects/Case/fields/Form_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Completed_Date__c</fullName>
    <description
  >BRD Phase 2-3: Date when successor completed and submitted the Succession Recommendation Form. Indicates readiness to proceed to Document Collection phase.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Auto-populated when successor completes the digital form via OmniScript. Triggers progression to Document Collection phase.</inlineHelpText>
    <label>Form Completed Date</label>
    <type>DateTime</type>
</CustomField>