force-app/main/default/objects/Case/fields/Form_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_Date__c</fullName>
    <description
  >BRD Phase 2: Date when Succession Recommendation Form (OmniScript) was sent to successor. Replaces deprecated SuccessorFormStatus__c with objective date stamp. Per BRD critical rule: form can only be sent AFTER verbal contact established.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Date when digital Succession Recommendation Form was sent to successor via OmniScript. Can only be sent after Contact Established is checked.</inlineHelpText>
    <label>Form Sent Date</label>
    <type>DateTime</type>
</CustomField>