force-app/main/default/objects/Case/fields/Grant_Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Settlement_Status__c</fullName>
    <description
  >BRD Phase 4 - Final Grant Pathway: Tracks the settlement process for final grants. Includes MyQ coordination, trading/liquidation, grant entry in Charities Profile, and INSF approval.</description>
    <inlineHelpText
  >Only applicable when Pathway = Final Grant. Tracks grant processing from MyQ coordination through settlement (typically T+1) to distribution confirmation.</inlineHelpText>
    <label>Grant Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>MyQ Coordination Pending</fullName>
            </value>
            <value>
                <fullName>Trading/Liquidation In Progress</fullName>
            </value>
            <value>
                <fullName>Settlement Pending (T+1)</fullName>
            </value>
            <value>
                <fullName>Entered in Charities Profile</fullName>
            </value>
            <value>
                <fullName>INSF Approval Pending</fullName>
            </value>
            <value>
                <fullName>Distribution Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>