force-app/main/default/objects/Case/fields/Last_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Attempt__c</fullName>
    <description>BRD Audit Trail: Timestamp of most recent contact attempt. Used for compliance reporting and to calculate days since last attempt for escalation logic.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto-populated with timestamp of most recent contact attempt. Used for audit trail and escalation timing.</inlineHelpText>
    <label>Last Contact Attempt</label>
    <type>DateTime</type>
</CustomField>