force-app/main/default/objects/Case/fields/New_DAF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>New_DAF_Account_Number__c</fullName>
    <description
  >BRD Phase 4 - New DAF Pathway: The newly established DAF account number where assets will be transferred. Populated during Step 1 (Verify new account established) of New DAF execution.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Only applicable when Pathway = New DAF Account. Enter the new account number after verifying it has been established for the successor.</inlineHelpText>
    <label>New DAF Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>