force-app/main/default/objects/Case/fields/Next_Contact_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Due__c</fullName>
    <description>BRD Contact Cadence: User-facing field showing when next contact attempt is scheduled. Used for agent visibility in list views and reports. Calculated based on BRD cadence: Day 0, 5, 35, 65, 95.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when next contact attempt is scheduled. Based on BRD contact cadence (Day 5, 35, 65, or 95 from case creation).</inlineHelpText>
    <label>Next Contact Due</label>
    <type>Date</type>
</CustomField>