force-app/main/default/objects/Case/fields/Next_Task_Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Scheduled_At__c</fullName>
    <description>Timestamp for when the next contact attempt Task should be automatically created. Set to 2 minutes after negative outcome is saved, giving agents time to correct mistakes. Scheduled flow checks this field every minute to create pending tasks.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Automatically set when contact attempt has negative outcome. Task will be created 2 minutes later by scheduled automation.</inlineHelpText>
    <label>Next Task Scheduled At</label>
    <type>DateTime</type>
</CustomField>