force-app/main/default/objects/Case/fields/Pathway_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Pathway_Confirmed__c</fullName>
    <description
  >BRD Phase 2: Successor&apos;s chosen succession pathway. Three mutually exclusive options per BRD section 3.1. Pathway locks once documentation begins - cannot be changed after that point.</description>
    <inlineHelpText
  >Select the succession pathway chosen by the successor. This selection locks once documentation collection begins and cannot be changed.</inlineHelpText>
    <label>Succession Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Selected</fullName>
                <default>true</default>
                <label>Not Selected</label>
            </value>
            <value>
                <fullName>Final Grant</fullName>
            </value>
            <value>
                <fullName>New DAF Account</fullName>
            </value>
            <value>
                <fullName>Disclaim Assets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>