force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <description>BRD Visual Indicator: Formula field showing case SLA status based on days open and contact status. Green (On Track), Yellow (Attention), Orange (At Risk), Red (Critical/Escalate). Per user request: escalates after 4 attempts, not 5.</description>
    <formula>IF(Contact_Established__c, &quot;✓ Complete&quot;,
  IF(Contact_Attempt_Count__c &gt;= 4, &quot;🔴 Critical - Escalate to Compliance&quot;,
    IF(TODAY() - DATEVALUE(CreatedDate) &gt; 65, &quot;🔴 Critical - Escalate&quot;,
      IF(TODAY() - DATEVALUE(CreatedDate) &gt; 35, &quot;🟠 At Risk&quot;,
        IF(TODAY() - DATEVALUE(CreatedDate) &gt; 5, &quot;🟡 Attention Needed&quot;,
          &quot;🟢 On Track&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visual SLA indicator. Green = on track, Yellow = needs attention (&gt;5 days), Orange = at risk (&gt;35 days), Red = critical (&gt;65 days or 4+ attempts). Escalates to compliance after 4 contact attempts.</inlineHelpText>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>