force-app/main/default/objects/Case/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <label>Successor</label>
    <description
  >Lookup to successor Contact. Displays in highlights panel with clickable navigation to Contact record. Also used by Successor_Email__c and Successor_Phone__c formula fields.</description>
    <inlineHelpText
  >The successor who will inherit or manage the deceased donor's assets. Click to view their Contact record.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Succession Cases (as Successor)</relationshipLabel>
    <relationshipName>Succession_Cases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>