force-app/main/default/objects/Case/fields/Successor_Email__c.field-meta.xml
<CustomField>
    <fullName>Successor_Email__c</fullName>
    <label>Successor Email</label>
    <description
  >Clickable email link that displays in the highlights panel. When clicked, opens email client to compose an email to the successor.</description>
    <inlineHelpText>Click to email the successor.</inlineHelpText>
    <type>Text</type>
    <formula>IF(
  NOT(ISBLANK(Successor__r.Email)),
  HYPERLINK(&apos;mailto:&apos; &amp; Successor__r.Email, Successor__r.Email, &apos;_self&apos;),
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>