force-app/main/default/objects/Case/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>BRD Phase 1: Tracks MyQ/G360 successor verification status. Used to ensure successors are verified against authoritative source before initial contact per BRD critical rule.</description>
    <inlineHelpText>Verify successor information against MyQ/G360 system before making contact. Required to complete before sending Succession Recommendation Form.</inlineHelpText>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete - Verified</fullName>
            </value>
            <value>
                <fullName>Discrepancies Found</fullName>
            </value>
            <value>
                <fullName>Awaiting Advisory Firm Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>