force-app/main/default/objects/Case/recordTypes/EstateAdministration.recordType-meta.xml
<RecordType>
    <fullName>EstateAdministration</fullName>
    <active>true</active>
    <businessProcess>Estate_Administration</businessProcess>
    <description>Record type for succession contact cadence cases.</description>
    <label>Estate Administration</label>
</RecordType>