force-app/main/default/objects/Case/validationRules/Contact_Attempt_Count_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Attempt_Count_Range</fullName>
    <active>true</active>
    <description>BRD Contact Cadence: Contact attempts must be between 1 and 5 per Day 0, 5, 35, 65, 95 schedule. Prevents invalid attempt counts.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Contact_Attempt_Count__c)),
    OR(
        Contact_Attempt_Count__c &lt; 1,
        Contact_Attempt_Count__c &gt; 5
    )
)</errorConditionFormula>
    <errorDisplayField>Contact_Attempt_Count__c</errorDisplayField>
    <errorMessage>Contact Attempt Count must be between 1 and 5. BRD allows maximum 5 attempts (Day 0, 5, 35, 65, 95).</errorMessage>
</ValidationRule>