force-app/main/default/objects/Case/validationRules/Contact_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Date_Not_Future</fullName>
    <active>true</active>
    <description>Contact Established Date cannot be in the future. Ensures data integrity for audit trails and compliance reporting.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Contact_Established_Date__c)),
    Contact_Established_Date__c &gt; NOW()
)</errorConditionFormula>
    <errorDisplayField>Contact_Established_Date__c</errorDisplayField>
    <errorMessage>Contact Established Date cannot be in the future. Please enter the actual date when contact was established.</errorMessage>
</ValidationRule>