force-app/main/default/objects/Case/validationRules/Contact_Established_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Established_Requires_Date</fullName>
    <active>true</active>
    <description>When Contact_Established__c is checked, Contact_Established_Date__c must be populated. Ensures data integrity for compliance tracking.</description>
    <errorConditionFormula>AND(
    Contact_Established__c = TRUE,
    ISBLANK(Contact_Established_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Contact_Established_Date__c</errorDisplayField>
    <errorMessage>Contact Established Date is required when Contact Established is checked.</errorMessage>
</ValidationRule>