force-app/main/default/objects/Case/validationRules/Form_Completed_After_Form_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Completed_After_Form_Sent</fullName>
    <active>true</active>
    <description>Form Completed Date cannot be before Form Sent Date. Enforces logical timeline for form processing.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Form_Completed_Date__c)),
    NOT(ISBLANK(Form_Sent_Date__c)),
    Form_Completed_Date__c &lt; Form_Sent_Date__c
)</errorConditionFormula>
    <errorDisplayField>Form_Completed_Date__c</errorDisplayField>
    <errorMessage>Form Completed Date cannot be before Form Sent Date. Please verify dates are correct.</errorMessage>
</ValidationRule>