force-app/main/default/objects/Case/validationRules/Form_Completed_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Completed_Not_Future</fullName>
    <active>true</active>
    <description>Form Completed Date cannot be in the future. Ensures data integrity for Phase 2 completion tracking.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Form_Completed_Date__c)),
    Form_Completed_Date__c &gt; NOW()
)</errorConditionFormula>
    <errorDisplayField>Form_Completed_Date__c</errorDisplayField>
    <errorMessage>Form Completed Date cannot be in the future. Please enter the actual completion date.</errorMessage>
</ValidationRule>