force-app/main/default/objects/Case/validationRules/Form_Date_After_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Date_After_Contact</fullName>
    <active>true</active>
    <description>Form Sent Date cannot be before Contact Established Date. Enforces BRD requirement that form is sent only after verbal contact.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Form_Sent_Date__c)),
    NOT(ISBLANK(Contact_Established_Date__c)),
    Form_Sent_Date__c &lt; Contact_Established_Date__c
)</errorConditionFormula>
    <errorDisplayField>Form_Sent_Date__c</errorDisplayField>
    <errorMessage>Form Sent Date cannot be before Contact Established Date. Forms must be sent after verbal contact per BRD requirements.</errorMessage>
</ValidationRule>