force-app/main/default/objects/Case/validationRules/Form_Requires_Contact_First.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Requires_Contact_First</fullName>
    <active>true</active>
    <description>BRD Critical Rule: Succession Recommendation Form can only be sent AFTER verbal contact is established. Prevents premature form distribution.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Form_Sent_Date__c)),
    Contact_Established__c &lt;&gt; TRUE
)</errorConditionFormula>
    <errorDisplayField>Form_Sent_Date__c</errorDisplayField>
    <errorMessage>Form cannot be sent until verbal contact is established. Per BRD requirements, form must only be sent after successful contact.</errorMessage>
</ValidationRule>