force-app/main/default/objects/Case/validationRules/Verification_Before_Initial_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Verification_Before_Initial_Contact</fullName>
    <active>true</active>
    <description>BRD Phase 1 Requirement: MyQ/G360 successor verification must be complete before initial contact attempt. Ensures compliance with verification protocol.</description>
    <errorConditionFormula>AND(
    Contact_Established__c = TRUE,
    NOT(ISPICKVAL(Verification_Status__c, &quot;Complete - Verified&quot;))
)</errorConditionFormula>
    <errorDisplayField>Verification_Status__c</errorDisplayField>
    <errorMessage>Successor identity must be verified (Verification Status = Complete - Verified) before establishing contact. Please complete Phase 1 verification in MyQ/G360 first.</errorMessage>
</ValidationRule>